<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">提交历史</string>
    <string name="tool">工具箱</string>
    <string name="clear">清空</string>
    <string name="submit">提交</string>
    <string name="withdraw">撤销</string>
    <string name="recover">恢复</string>
    <string name="reconnect">连接蓝牙笔</string>
    <string name="reupload">重新上传</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>

    <string name="clear_all">清空</string>

    <string name="action_settings">设置</string>
    <string name="toolbar_title">主页</string>

    <string name="menu_instruction">使用说明</string>
    <string name="menu_contact_us">关于我们</string>

    <string name="menu_history">历史作答记录</string>
    <string name="menu_to_be_upload">待上传</string>

    <string name="menu_bluetooth_connect">蓝牙笔连接</string>
    <string name="menu_toolbox">工具箱</string>

    <string name="timer">秒表</string>
    <string name="close_timer">X</string>
    <string name="timer_start">开始</string>
    <string name="timer_stop">停止</string>
    <string name="timer_clear">清零</string>
    <string name="record">录音</string>
    <string name="record_start">开始录音</string>
    <string name="record_stop">停止录音</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instuction_content0">\t\t\t\t欢迎使用电子量表数据采集系统。为了确保您良好的使用体验，请仔细阅读以下使用指南：</string>
    <string name="instuction_content1">\t\t\t\t本测试需要使用配套的蓝牙笔和专业量表进行测验。设备推荐使用小米平板6，其他型号移动设备可能存在显示错误问题。在开始测试之前，请确保设备已连接到网络，并将蓝牙笔与设备连接。当蓝牙笔提示灯显示为蓝色时，即表示连接成功。随后，使用者可按照正常书写方式使用蓝牙笔填写量表。
    使用者书写的内容将实时传输到本设备。在测试主页上，您可以使用撤回和清空按钮对传输到本设备的笔迹进行修改。完成所有测试后，请点击上传按钮将内容上传，以便进行后续检测与分析。</string>
    <string name="instuction_content2">\t\t\t\t如果测试数据未能成功上传，您可以在侧边栏的“待上传”中查看未上传的测试，并重新提交。同时，侧边栏的“历史作答记录”支持查看历史提交内容。</string>
    <string name="instuction_content3">\t\t\t\t若在测试过程中遇到蓝牙笔连接失效问题，您可以在侧边栏的“蓝牙笔连接”处重新连接。
在侧边栏的“工具箱”中提供了计时器等工具，您可以直接拖动这些工具至测试主页以便使用。</string>
    <string name="instuction_content4">\t\t\t\t如果在使用有任何疑问，请点击侧边栏中的“联系我们”，本团队将为您提供专业的帮助。</string>
    <string name="instuction_content5">\t\t\t\t为了提供更准确、更个性化的服务，本团队将收集测试信息并进行后续分析研究。本团队将以高度勤勉和审慎的态度对待这些信息，并严格遵守相关法律法规。未经您事先许可，本应用不会将这些信息对外披露或提供给第三方。北京邮电大学脑认知与智能医学中心（CAIMI）保留对上述说明的最终解释权。</string>
    <string name="dummy_content">qwiueqwiuewui</string>
    <string name="dummy_button">askuasdua</string>
    <string name="sound_file_url">http://192.168.0.103:8082/api/scale/upload_sound</string>
    <string name="accumulator">TMT计数器</string>
    <string name="picture">MMSE测试用图</string>
</resources>