<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/instruction"
            android:icon="@drawable/ic_instruction"
            android:title="@string/menu_instruction"
            app:actionLayout="@layout/side" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us"
            app:actionLayout="@layout/side"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history"
            app:actionLayout="@layout/side"/>
        />
        <item
            android:id="@+id/to_be_upload"
            android:icon="@drawable/ic_to_be_upload"
            android:title="@string/menu_to_be_upload"
            app:actionLayout="@layout/side"/>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/bluetooth_connect"
            android:icon="@drawable/ic_bluetooth_connect"
            android:title="@string/menu_bluetooth_connect"
            app:actionLayout="@layout/side"/>
        <item
            android:id="@+id/toolbox"
            android:icon="@drawable/ic_toolbox"
            android:title="@string/menu_toolbox"
            app:actionLayout="@layout/side"
            />
        <item
            android:id="@+id/timer"
            android:title="@string/timer"
            app:showAsAction="never"
            app:actionLayout="@layout/side"/>

        <item
            android:id="@+id/record"
            android:title="@string/record"
            app:showAsAction="never"
            app:actionLayout="@layout/side"/>


    </group>
</menu>