<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewInstuction0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/instuction_content0" />
    <TextView
        android:id="@+id/textViewInstuction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/instuction_content1" />
    <TextView
        android:id="@+id/textViewInstuction2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/instuction_content2" />
    <TextView
        android:id="@+id/textViewInstuction3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/instuction_content3" />
    <TextView
        android:id="@+id/textViewInstuction4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/instuction_content4" />
    <TextView
        android:id="@+id/textViewInstuction5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/instuction_content5" />
</LinearLayout>